--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<html>
+<body>
 <h2>Enjoy this mini game, while you hodl</h2>
 <p>Play as Captain Doge for a few minutes.</p>
 <p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
 <p>Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong></p>
 <p><strong>&nbsp;Play the game here : <a href="https://muchwowstore.github.io/Game.md">Play</a></strong></p>
+</body>
+</html>
