--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
 <p>Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong></p>
 <p><strong>&nbsp;Play the game here : <a href="/Game.html">Play</a></strong></p>
+ 
+<p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen1.png" alt="" width="400" height="300" /></p>  
+<p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen2.png" alt="" width="400" height="300" /></p>    
 </body>
 </html>
