--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+ <style>
+.content {
+  max-width: 800px;
+  margin: auto;
+}
+</style>
 <body>
 <h2>Enjoy this mini game, while you hodl.  Brought to you by u/transytionstudios  </h2>
 <p> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
