--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   margin: auto;
 }
 </style>
-<body>
+<body style="background-color:black;">
+ <div  class="content">
 <h2>Enjoy this mini game, while you hodl.  Brought to you by u/transytionstudios  </h2>
 <p> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
 <p>Play as Captain Doge for a few minutes.</p>
@@ -14,5 +15,6 @@
 <p><strong>&nbsp;Play the game here : <a href="/Game.html">Play</a></strong></p>
  
 <p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen1.JPG" alt="" width="500" height="300" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen2.JPG" alt="" width="500" height="300" /></p>    
+ </div>
 </body>
 </html>
