--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <html>
  <style>
 .content {
-  max-width: 800px;
+  max-width: 1200px;
   margin: auto;
 }
 </style>
 <body style="background-color:black;">
  <div  class="content">
 <h2>Enjoy this mini game, while you hodl.  Brought to you by u/transytionstudios  </h2>
-<p> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
-<p>Play as Captain Doge for a few minutes.</p>
-<p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
-<p>Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong></p>
-<p><strong>&nbsp;Play the game here : <a href="/Game.html">Play</a></strong></p>
+<p style="color:white"> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
+<p style="color:white">Play as Captain Doge for a few minutes.</p>
+<p style="color:white"><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
+<p style="color:white">Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong></p>
+<p style="color:white"><strong>&nbsp;Play the game here : <a href="/Game.html">Play</a></strong></p>
  
-<p><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen1.JPG" alt="" width="500" height="300" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen2.JPG" alt="" width="500" height="300" /></p>    
+<p style="color:white"><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen1.JPG" alt="" width="500" height="300" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen2.JPG" alt="" width="500" height="300" /></p>    
  </div>
 </body>
 </html>
