--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 <body style="background-color:black;">
  <div  class="content">
-<h2>Enjoy this mini game, while you hodl.  Brought to you by u/transytionstudios  </h2>
+<h2 style="color:white">Enjoy this mini game, while you hodl.  Brought to you by u/transytionstudios  </h2>
 <p style="color:white"> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
 <p style="color:white">Play as Captain Doge for a few minutes.</p>
 <p style="color:white"><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
