--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p style="color:white"> You can also follow me on twitter for more updates <strong><a href="https://twitter.com/TransytionStud1">@TransytionStud1</a></strong> </p>
 <p style="color:white">Play as Captain Doge for a few minutes.</p>
 <p style="color:white"><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/CaptainDoge.png" alt="" width="176" height="172" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/DogeAddress.png" alt="" /></p>
-<p style="color:white">Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong></p>
+<p style="color:white">Also, consider donating some Doge to <strong>DFMhTR3taFWAdUY8kL3T1nqpwxS6xgmUhS&nbsp;</strong> while I work on the full version of my game.</p>
 <p style="color:white"><strong>&nbsp;Play the game here : <a style="font-size: 26px;" href="/Game.html">Play</a></strong></p>
  
 <p style="color:white"><img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen1.JPG" alt="" width="500" height="300" /> <img src="https://raw.githubusercontent.com/muchwowstore/muchwowstore.github.io/main/Screen2.JPG" alt="" width="500" height="300" /></p>    
